# gitlint

./: .gitlint  Dockerfile  README.md  action.yml  dev-requirements.in  dev-requirements.txt  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-deploy.yml  format.yml  gitlint.yml  pytest.yml  python-lint.yml
rules/: define_impact.py
tests/: base.py  test_define_impact.py
