[project]
name = "seravo_gitlint"
description = ""
requires-python = ">=3.12"


[tool.pyright]
exclude = ["python-seravo"]
typeCheckingMode = "strict"
reportUnknownMemberType = "warning"
reportIncompatibleMethodOverride = "warning"
reportGeneralTypeIssues = "information"
reportUnknownVariableType = "information"
reportIncompatibleVariableOverride = "information"
reportPrivateImportUsage = false
reportMissingModuleSource = false
reportSelfClsParameterName = false
reportMissingTypeStubs = false
reportUnusedFunction = false
reportUntypedFunctionDecorator = false
reportUnnecessaryTypeIgnoreComment = "error"


[tool.ruff]
line-length = 79
exclude = ["python-seravo", "migrations", "external"]
lint.select = [
    "C90",     # mccabe
    "E",       # pycodestyle
    "F",       # pyflakes
    "UP",      # pyupgrade
    "W",       # pycodestyle
    "I",       # isort
    "ANN001",  # flake8-annotations name
    "ANN002",  # flake8-annotations args
    "ANN003",  # flake8-annotations kwargs
    "ASYNC",   # flake8-async
    "ARG",     # flake8-unused-arguments
    "S",       # flake8-bandit
    "FBT",     # flake8-boolean-trap
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "TID252",  # flake8-tidy-imports
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "PTH",     # flake8-use-pathlib
    "PLR1714", # pylint
    "PERF",    # Perflint
    "RUF",     # Ruff
    "D201",    # no-blank-line-before-function
    "D202",    # no-blank-line-after-function
    "D204",    # one-blank-line-after-class
    "D419"     # empty-docstring
]
lint.ignore = [
    "S101", # Use of assert detected
    "S311", # Use of standard pseudo-random generators
    "S603", # Subprocess without shell
    "PERF203", # Use of try except in loop
]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# For parametrize and fixture, ignore boolean trap and unused args in tests
"tests/**.py" = ["FBT001", "ARG002", "ARG001"]
"tests/base.py" = ["ANN", "E", "RET", "PTH"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
preview = true
quote-style = "preserve"

[tool.coverage.run]
branch = true
data_file = ".coverage"
omit = [
    "external/*",
    "python-seravo/*",
    "tests/*",
    "ve/*"
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
skip_empty = true
